[fix] layout problems.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Noto Sans Japanese', 'Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W3', Meiryo, メイリオ, Osaka, 'MS PGothic', arial, helvetica, sans-serif;
+  word-break: break-all;
 }
 
 a {
