--- a/src/scss/module/_page.scss
+++ b/src/scss/module/_page.scss
@@ -127,13 +127,20 @@ article.page__content {
   .instagram-media.instagram-media-rendered {
     margin: 12px auto !important;
   }
+
   /* simple share button adder */
-  .ssba-wrap {
+  #ssba-modern-2.ssba.ssbp-wrap {
     border-top: #035 dashed 1px;
     border-bottom: #035 dashed 1px;
     padding: 8px;
-    margin: 12px;
+    margin: 64px 12px 0;
+    display: block;
+    ul.ssbp-list li {
+      margin: 6px;
+      padding: 6px;
+    }
   }
+
   /* kaereba */
   .booklink-box, .kaerebalink-box {
     padding: 12px 24px;
